--- a/Todo.Domain.Api/appsettings.json
+++ b/Todo.Domain.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "Server=localhost\\SQLEXPRESS;Database=Todos;User ID=sa;Password=sqlexpress"
+    "connectionString": "server=mysql.parmex.com.br;database=parmex;user=parmex;password=pkjrej8030"
   }
 }
