--- a/Todo.Domain.Api/appsettings.json
+++ b/Todo.Domain.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "server=mysql.parmex.com.br;database=parmex;user=parmex;password=pkjrej8030",
+    "connectionString": "server=mysql.parmex.com.br;database=parmex;user=parmex;password=123456",
     "mongodbConnectionString": "mongodb://parmex01:pkjrej8030@mongodb.parmex.com.br:27017/parmex01"
   }
 }
