--- a/Todo.Domain.Api/appsettings.Development.json
+++ b/Todo.Domain.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "connectionString": "server=mysql.parmex.com.br;database=parmex;user=parmex;password=pkjrej8030"
+    "connectionString": "server=mysql.parmex.com.br;database=parmex;user=parmex;password=123456"
   }
 }
