--- a/Todo.Domain.Api/appsettings.json
+++ b/Todo.Domain.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "server=mysql.parmex.com.br;database=parmex;user=parmex;password=123456",
-    "mongodbConnectionString": "mongodb://parmex01:pkjrej8030@mongodb.parmex.com.br:27017/parmex01"
+    "connectionString": "server=mysql....com.br;database=db;user=parmex;password=123456",
+    "mongodbConnectionString": "mongodb://...:123456@mongodb...com.br:27017/..."
   }
 }
